# Tag_Oriented_Programming

./: .gitignore  CODEOWNERS  CONFORMANCE.md  CONTRIBUTING.md  GOVERNANCE.md  README.md  TRADEMARK.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  step_proposal.md
TagKit/: IMPLEMENTATION_NOTES.md  TagKit.py  __init__.py
spec/: LICENSE  SPECIFICATION.md
steps/: README.md  STEP-template.md
tests/: test_tagkit.py
